# smart-pdf

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  generate.sh  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  spdfcore.h  spdfcore_jni.cpp  spdfcore_new.h
android/app/src/main/kotlin/com/example/smart_pdf/: MainActivity.kt  SpdfcorePlugin.kt
ios/: Podfile  setup_framework.rb
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  spdfcore.dart  spdfcore_rust.dart
lib/bridge_generated.dart/: ffi.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/models/: pdf_tool.dart
lib/screens/: about_screen.dart  files_screen.dart  home_screen.dart  pdf_viewer_screen.dart  splash_screen.dart  tool_screen.dart
lib/services/: ad_service.dart  pdf_file_service.dart  pdf_processing_service.dart  pdf_processing_service_old.dart
lib/theme/: app_theme.dart
lib/widgets/: file_list_item.dart  progress_overlay.dart  tool_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
scripts/: README.md  build_android.sh  build_ios.sh
